2011-02-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Now the standard deviation necessary to prevent aliasing is
	computed based on proper formulas, instead of guessing. Notes
	about the computations have been added to the help header.

	- Add input argument sigma to force bandwidth of Gaussian filter.

	- Fix bug, the number of rows and columns were swapped, so that
	after reshaping the interpolated intensity vector, the voxels were
	in the wrong place.

2011-01-31  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/pts_tps_weights.m from svn://edison.comlab.ox.ac.uk/ramc/rcasero/matlab-toolbox/pts/trunk/pts_tps_weights.m

	PTS_TPS_WEIGHTS  Compute weights and affine parameters of
	thin-plate spline warp for N-dimensional points

	This function is a dependency that I had forgotten for
	FiltersToolbox/scinrrd_estimate_bias_field.m.

	* Add PointsToolbox/pts_tps_map.m from
	svn://edison.comlab.ox.ac.uk/ramc/rcasero/matlab-toolbox/pts/trunk/pts_tps_map.m

	PTS_TPS_MAP Interpolate/warp/map N-dimensional points using a
	thin-plate spline transformation

	This function is a dependency that I had forgotten for
	FiltersToolbox/scinrrd_estimate_bias_field.m.

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Make function a lot faster, especially with large images.

	Instead of low-pass filtering the image, reducing the size and
	sampling the background points, now we sample the background
	points and a region around them, and low-pass filter only the
	voxels of interest.

2011-01-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Add low-pass anti-aliasing filter before downsampling
	image. Make it optative, in case filtering is too slow.

	* Add FiltersToolbox/fspecial3.m

	- FSPECIAL3  Create predefined 3-dimensional filters.

2011-01-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_estimate_bias_field.m
